<resources>
    <string name="app_name">Online Library</string>
    <string name="sign_in">Авторизация</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="you_dont_have_an_account_yet">Еще нет аккаунта?</string>
    <string name="sign_in_do">Зарегистрироваться</string>
    <string name="sign_in_btn">Войти</string>
    <string name="sign_up1">Регистрация</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="username">Имя пользователя</string>
    <string name="about_the_app">О приложении</string>
    <string name="version">Версия 1.0.0(1)</string>
    <string name="about_app">Online Library - Мобильное приложение для поиска и чтения книг. Онлайн библиотека решает насущную потребность книголюбов. Приложение предоставляет доступ к обширному каталогу книг различных жанров. Наше мобильное приложение предоставляет возможность читать книги на ходу, без необходимости носить с собой физические книги. Приложение разработано с учетом принципов эргономики, чтобы минимизировать нагрузку на глаза и дискомфорт во время длительного чтения. Мобильное приложение позволяет пользователям читать книги бесплатно.</string>
    <string name="download">Скачать</string>
    <string name="password_change">Смена пароля</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="change_password">Изменить пароль</string>
    <string name="my_books">Мои книги</string>
    <string name="section_books">Книги по разделам</string>
    <string name="profile">Профиль</string>
    <string name="interface_language">Язык интерфейса</string>
    <string name="report_a_problem">Сообщить о проблеме</string>
    <string name="about_app1">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="change_profile_photo">Изменить фото профиля</string>
    <string name="log_out">Выйти</string>
    <string name="search">Поиск</string>
    <string name="support_service">Служба поддержки</string>
    <string name="subject_of_address">Тема обращения</string>
    <string name="problem_with">Проблема с...</string>
    <string name="enter_the_subject_of_the_appeal">Введите тему обращения</string>
    <string name="your_email">Ваша электронная почта</string>
    <string name="message">Сообщение</string>
    <string name="from_to_symbols">От 20 до 20000 символов</string>
    <string name="send">Отправить</string>
    <string name="language">Русский</string>
    <string name="reader">Читалка</string>
    <string name="sections">Разделы</string>
    <string name="beginner">Новичок</string>
    <string name="reader_">Читатель</string>
    <string name="bookworm">Книжный червь</string>
    <string name="librarian">Библиотекарь</string>
    <string name="reading_wizard">Мастер чтения</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>